# Axum

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: mail.rs  main.rs
